--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <img id="logo" src="img/logo.svg" alt="logo">
+    </header>
 </body>
 </html>
