main_work in progress

--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <header>
         <img id="logo" src="img/logo.svg" alt="logo">
     </header>
+
+    <main>
+        <h1>Internet deve essere al servizio del "bene pubblico": Il manifesto di Tim-Berners Lee</h1>
+        <h4 class="grey">Scritto da <span>The Booleaner</span></h4>
+        <h5 class="grey">il 28/02/2022</h5>
+    </main>
 </body>
 </html>
