--- a/index.html
+++ b/index.html
@@ -15,7 +15,25 @@
     <main>
         <h1>Internet deve essere al servizio del "bene pubblico": Il manifesto di Tim-Berners Lee</h1>
         <h4 class="grey">Scritto da <span>The Booleaner</span></h4>
-        <h5 class="grey">il 28/02/2022</h5>
+        <h5 class="grey margin-b">il 28/02/2022</h5>
+
+        <div>
+            <img src="img/tim-1.jpg" alt="Scatto Tim 1">
+            <img src="img/tim-2.jpg" alt="Scatto Tim 2">
+            <h6>1st photo: John S. and James L. Knight Foundation, by Scott Henrichsen</h6>
+            <h6 class="margin-b">2nd photo: Wikimedia, by Paul Clarke</h6>
+        </div>
+
+        <div>
+            <p class="margin-b">Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="yellow-backg">cum ad ullam exercitationem, dolorum praesentium voluptas velit reiciendis!</span> Iste explicabo veniam possimus ullam impedit quod temporibus inventore veritatis totam recusandae.</p>
+
+            <ul class="margin-b">
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. </li>
+                <li>Quaerat quo praesentium maiores sunt, totam inventore maxime.</li>
+                <li>Commodi, quam dicta iste eligendi non blanditiis ad dolorum hic illo cumque et at, voluptatem atque excepturi maxime!</li>
+            </ul>
+
+        </div>
     </main>
 </body>
 </html>
