--- a/index.html
+++ b/index.html
@@ -25,15 +25,53 @@
         </div>
 
         <div>
-            <p class="margin-b">Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="yellow-backg">cum ad ullam exercitationem, dolorum praesentium voluptas velit reiciendis!</span> Iste explicabo veniam possimus ullam impedit quod temporibus inventore veritatis totam recusandae.</p>
+            <p class="margin-b">Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="yellow-backg">cum ad ullam exercitationem, dolorum praesentium voluptas velit reiciendis!</span> Iste explicabo veniam possimus ullam impedit quod temporibus inventore veritatis totam recusandae. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa aperiam facere libero vero placeat enim doloremque dolor error modi distinctio asperiores, id, fuga quod optio, ratione dolorum veritatis suscipit eveniet.</p>
 
             <ul class="margin-b">
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. </li>
                 <li>Quaerat quo praesentium maiores sunt, totam inventore maxime.</li>
                 <li>Commodi, quam dicta iste eligendi non blanditiis ad dolorum hic illo cumque et at, voluptatem atque excepturi maxime!</li>
             </ul>
+        </div>
 
+        <div class="margin-b">
+            <table>
+                <thead>
+                    <tr class="color_thead">
+                        <th width="300px">Lorem ipsum dolor</th>
+                        <th width="300px">Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="color_tbody">
+                        <td>Lorem ispum dolor</td>
+                        <td>Lorem ispum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed unde quos error excepturi totam maxime quasi in provident fugit, laborum soluta quidem ad eum expedita molestiae iste distinctio sequi molestias?</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ispum dolor</td>
+                        <td>Lorem ispum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed unde quos error excepturi totam maxime quasi in provident fugit, laborum soluta quidem ad eum expedita molestiae iste distinctio sequi molestias?</td>
+                    </tr>
+                    <tr class="color_tbody">
+                        <td>Lorem ispum dolor</td>
+                        <td>Lorem ispum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed unde quos error excepturi totam maxime quasi in provident fugit, laborum soluta quidem ad eum expedita molestiae iste distinctio sequi molestias?</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="margin-b">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos magni repellendus placeat, sequi, <span class="yellow-backg">eius facilis quas ad adipisci dignissimos officiis vero libero nobis illum qui ipsum laboriosam sapiente omnis blanditiis!</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque quam esse nostrum repudiandae optio numquam pariatur, nobis sequi dolorem deserunt. Ex modi quis impedit maxime soluta nemo molestiae magnam totam.</p>
         </div>
     </main>
+
+    <footer>
+        <h3 class="grey margin-b">Potrebbero interessarti</h3>
+        <div id="pop-up1"><h2>Lorem ipsum dolor</h2></div>  
+        <div id="pop-up2"><h2>Lorem ipsum dolor</h2></div>      
+    </footer>
 </body>
 </html>
