--- a/index.html
+++ b/index.html
@@ -9,22 +9,30 @@
     <link rel="stylesheet" href="css/bonus.css">
 </head>
 <body>
+
     <header>
         <img id="logo" src="img/logo.svg" alt="logo">
     </header>
 
     <main>
-        <h1>Internet deve essere al servizio del "bene pubblico": Il manifesto di Tim-Berners Lee</h1>
-        <h4 class="grey">Scritto da <span>The Booleaner</span></h4>
-        <h5 class="grey margin-b">il 28/02/2022</h5>
+        <!-- Titolo e crediti -->
+        <div class="margin-b">
+            <h1>Internet deve essere al servizio del "bene pubblico": Il manifesto di Tim-Berners Lee</h1>
+            <h4 class="grey">Scritto da <span>The Booleaner</span></h4>
+            <h5 class="grey">il 28/02/2022</h5>
+        </div>
+        <!-- /Titolo e crediti -->
 
-        <div>
+        <!-- Foto e descrizione foto -->
+        <div class="margin-b">
             <img src="img/tim-1.jpg" alt="Scatto Tim 1">
             <img src="img/tim-2.jpg" alt="Scatto Tim 2">
             <h6>1st photo: John S. and James L. Knight Foundation, by Scott Henrichsen</h6>
-            <h6 class="margin-b">2nd photo: Wikimedia, by Paul Clarke</h6>
+            <h6>2nd photo: Wikimedia, by Paul Clarke</h6>
         </div>
+        <!-- /Foto e descrizione foto -->
 
+        <!-- Paragrafo e lista non ordinata -->
         <div>
             <p class="margin-b">Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="yellow-backg">cum ad ullam exercitationem, dolorum praesentium voluptas velit reiciendis!</span> Iste explicabo veniam possimus ullam impedit quod temporibus inventore veritatis totam recusandae. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa aperiam facere libero vero placeat enim doloremque dolor error modi distinctio asperiores, id, fuga quod optio, ratione dolorum veritatis suscipit eveniet.</p>
 
@@ -34,7 +42,9 @@
                 <li>Commodi, quam dicta iste eligendi non blanditiis ad dolorum hic illo cumque et at, voluptatem atque excepturi maxime!</li>
             </ul>
         </div>
+        <!-- /Paragrafo e lista non ordinata -->
 
+        <!-- Tabella -->
         <div class="margin-b">
             <table>
                 <thead>
@@ -63,16 +73,23 @@
                 </tbody>
             </table>
         </div>
+        <!-- /Tabella -->
 
+        <!-- Paragrafo finale del main -->
         <div class="margin-b">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos magni repellendus placeat, sequi, <span class="yellow-backg">eius facilis quas ad adipisci dignissimos officiis vero libero nobis illum qui ipsum laboriosam sapiente omnis blanditiis!</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque quam esse nostrum repudiandae optio numquam pariatur, nobis sequi dolorem deserunt. Ex modi quis impedit maxime soluta nemo molestiae magnam totam.</p>
         </div>
+        <!-- /Paragrafo finale del main -->
+
     </main>
 
+    <!-- Footer e Pubblicità -->
     <footer>
         <h3 class="grey margin-b">Potrebbero interessarti</h3>
         <div id="pop-up1"><h2>Lorem ipsum dolor</h2></div>  
         <div id="pop-up2"><h2>Lorem ipsum dolor</h2></div>      
     </footer>
+    <!-- /Footer e Pubblicità -->
+
 </body>
 </html>
